# fmerge_cpp

./: CMakeLists.txt  README.md
.github/workflows/: cmake-build.yml  cmake-single-platform.yml  cmake-test.yml
cmake/: CheckGit.cmake  Version.cpp.in
src/: ApplicationState.h  Config.cpp  Config.h  ConflictResolver.cpp  ConflictResolver.h  Connection.cpp  Connection.h  Errors.h  FileTree.cpp  FileTree.h  Filesystem.cpp  Filesystem.h  Globals.h  MergeAlgorithms.cpp  MergeAlgorithms.h  NetProtocol.cpp  NetProtocol.h  Peer.cpp  Peer.h  StateController.cpp  StateController.h  Syncer.cpp  Syncer.h  Terminal.cpp  Terminal.h  Util.cpp  Util.h  Version.h  main.cpp
src/protocol/: GenericMessage.h  NetProtocol.cpp  NetProtocol.h  NetProtocolRegistry.h
test/: CMakeLists.txt  run_tests.py
test/helpers/: __init__.py  file_gen.py  fmerge_wrapper.py  util.py
